Aligned X icon in mobile dropdown menu & fixed font family for menu links

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ img:not([src]):not([srcset]) {
 
 
 
-// Hover slide indices background color change:
+/* Hover slide indices background color change */
 
 .manual-btn:hover {
   background: #9D9D9D;
@@ -129,7 +129,7 @@ img:not([src]):not([srcset]) {
 
 
 
-// Manual slide navigation:
+/* Manual slide navigation */
 
 #radio1:checked ~ .first {
   margin-left: 0;
@@ -153,7 +153,7 @@ img:not([src]):not([srcset]) {
 
 
 
-// Active indices background color change:
+ /* Active indices background color change */
 
 #radio1:checked ~ .navigation-auto .auto-btn1 {
   /* background: white; */
@@ -204,15 +204,15 @@ h1 {
 
 
 
-// Mobile dropdown menu changes (menu-active class toggle):
+/*  Mobile dropdown menu changes (menu-active class toggle) */
 
 .topLine span:nth-of-type(1).menu-active {
-  width: 28px;
+  width: 35px;
   transition: width 0.2s ease-in-out;
 }
 
 .topLine span:nth-of-type(2).menu-active {
-  width: 80px;
+  width: 70px;
   transition: width 0.2s ease-in-out;
 }
 
@@ -229,7 +229,7 @@ h1 {
 }
 
 .bottomLine span:nth-of-type(1).menu-active {
-  width: 28px;
+  width: 28.5px;
   transition: width 0.2s ease-in-out;
 }
 
@@ -269,7 +269,7 @@ header h1.menu-active {
 }
 
 
-// Dropdown menu mobile - Links font
+/* Dropdown menu mobile - Links font */
 
 #dropdown-mobile li a {
   font-family: MohaveRegular;
